# ai-interviewer

./: README.md  docker-compose.yml
client/: .dockerignore  Dockerfile  package-lock.json  package.json
client/src/: App.jsx  index.css
client/src/components/: AuthComponent.jsx  CandidateComponent.jsx  CandidateDataComponent.jsx  InterviewerComponent.jsx  JobComponent.jsx  Navbar.jsx
client/src/pages/: HistoryPage.jsx  HomePage.jsx  InterviewPage.jsx  JobsPage.jsx  LandingPage.jsx  ProfilePage.jsx
client/src/services/: auth-service.js  candidate-service.js  interview-service.js  job-service.js  realtime_service.js
docs/: challenges.md
server/: .env.example  Dockerfile  main.py  pyproject.toml
server/src/agents/: answers_evaluator.py  interview_planner.py  questions_generator.py  resume_parser.py
server/src/api/: auth_api.py  candidate_api.py  interview_api.py  job_api.py  resume_api.py
server/src/core/: config.py  supabase.py  supabase_pg.py
server/src/managers/: interview_session_manager.py
server/src/models/: profile.json
server/src/schemas/: auth_schema.py  candidate_schema.py  interview_schema.py  job_schema.py  resume_schema.py
server/src/scripts/: cleanup_stale_interviews.sql  create_indexes.sql  create_rls.sql  create_tables.sql
server/src/services/: auth_service.py  candidate_service.py  gemini.py  gemini_service.py  interview_service.py  job_service.py  resume_service.py  supabase.py
server/src/tools/: get_interview_context.py
