[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.2",
    "google-genai>=2.12.1",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "supabase>=2.31.0",
    "uvicorn>=0.51.0",
]
